написал тесты, переделал обработку ошибок, переделал структуру pom, исправил баги